# ChemReactor

./: .readthedocs.yaml  LICENSE  README.md  chemreactor.yml  pyproject.toml  requirements.txt  setup.py
chemreactor/core/: __init__.py  base_reactor.py
chemreactor/examples/: batch_reaction_example.py  cstr_example.py  pfr_example.py
chemreactor/reactors/: batch_reactor.py  cstr.py  pfr.py
chemreactor/tests/: test_core_pytest.py  test_reactors_pytest.py
chemreactor/visualization/: reactor_animation.py
chemreactor/web/: chemreactorDemo_app.py  streamlit_app.py
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt
